package org.apache.mesos.logstash.common;

option java_package = "org.apache.mesos.logstash.common";
option java_outer_classname = "LogstashProtos";

message LogstashConfig {
  enum LogstashConfigType {
    DOCKER = 1;
    HOST = 2;
  }
  required string frameworkName = 1;
  required string config = 2;
  required LogstashConfigType type = 3;
}

message SchedulerMessage {
  enum SchedulerMessageType {
      REQUEST_STATS = 1;
      NEW_CONFIG = 2;
  }
  required SchedulerMessageType type = 1;

  // NEW_CONFIG
  repeated LogstashConfig configs = 2;
}

message ContainerState {
  enum LoggingStateType {
    STREAMING = 1;
    NOT_STREAMING = 2;
    ERROR = 3;
  }
  required LoggingStateType type = 1;
  required string containerId = 2;
  required string imageName = 3;
  optional string errorMessage = 4;
}

message ExecutorMessage {
  enum ExecutorMessageType {
      STATS = 1;
  }
  required ExecutorMessageType type = 1;

  // STATS
  enum ExecutorStatus {
    INITIALIZING = 1;
    RESTARTING = 2;
    ERROR = 3;
    RUNNING = 4;
  }
  optional ExecutorStatus status = 2;
  required string hostName = 3;
  repeated ContainerState containers = 4;
}
